# Do-Not-Milk-The-Milk-Man

./: .replit  README.md  copyright.md  entitys.py  main.py  pyproject.toml
scripts/: Weapons.py  entitys.py  main.py
src/: Weapons.py  dialoge.py  entitys.py  game.py  main.py
