[tool.poetry]
name = "do-not-milk-the-milk-man"
version = "0.1.0"
description = ""
authors = ["kayosman <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
wakatime = "^13.1.0"
ascii = "^3.6"
ascii-py = "^2.0"
art = "^5.5"
xy-art = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
